@@ -1,3 +1,11 @@
+2015-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-art.el (gnus-hidden-properties): Simplify.
+	(gnus-article-hide-text, gnus-article-unhide-text)
+	(gnus-article-unhide-text-type): Remove special handling of
+	`intangible' since that property is not used any more.
+	(gnus-article-treat-body-boundary): Use gnus-hidden-properties.
+
 2015-04-06  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* dgnushack.el (define-obsolete-function-alias): Add a compiler-marco
